<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFECB3"
    android:scrollbars="none"
    tools:context=".fragment.PostDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/editImageView"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:foreground="@drawable/custom_image"
            android:scaleType="fitCenter"
            android:src="@drawable/post_placeholder"
            app:layout_constrainedHeight="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/changeImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="120dp"
            android:background="@drawable/custom_button"
            android:text="@string/change_image"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editImageView" />

        <EditText
            android:id="@+id/editTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeImageButton" />

        <EditText
            android:id="@+id/editDesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/des"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTitleEditText" />

        <EditText
            android:id="@+id/editDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_input"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawablePadding="15dp"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/date"
            android:inputType="date"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDesEditText" />

        <EditText
            android:id="@+id/editTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/time"
            android:inputType="time"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDateEditText" />

        <EditText
            android:id="@+id/editQuantityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/quantity"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTimeEditText" />

        <EditText
            android:id="@+id/editLocationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="textPostalAddress"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editQuantityEditText" />

        <Button
            android:id="@+id/editSavePostButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/custom_button"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deletePostButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLocationEditText" />

        <Button
            android:id="@+id/deletePostButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/custom_button"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editSavePostButton"
            app:layout_constraintTop_toBottomOf="@+id/editLocationEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
