<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFECB3"
    android:scrollbars="none"
    tools:context=".fragment.CreateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/createImageView"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:foreground="@drawable/custom_image"
            android:scaleType="fitCenter"
            android:src="@drawable/post_placeholder"
            app:layout_constrainedHeight="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="140dp"
            android:background="@drawable/custom_button"
            android:text="@string/add_image"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createImageView" />

        <EditText
            android:id="@+id/createTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addImageButton" />

        <EditText
            android:id="@+id/createDesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/des"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createTitleEditText" />

        <EditText
            android:id="@+id/createDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_input"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawablePadding="15dp"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/date"
            android:inputType="date"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createDesEditText" />

        <EditText
            android:id="@+id/createTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/time"
            android:inputType="time"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createDateEditText" />

        <EditText
            android:id="@+id/createQuantityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/quantity"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createTimeEditText" />

        <EditText
            android:id="@+id/createLocationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="textPostalAddress"
            android:padding="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createQuantityEditText" />

        <Button
            android:id="@+id/createSavePostButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/custom_button"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createLocationEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
